completed story: one

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .square {
   border: 2px solid black;
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
+  
+}
+
+.toeBoard {
+  display: flex;
+  flex-wrap: wrap;
+  width: 620px;
+  margin:auto
 }
